# ml-numerai

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
models/: ckpt.index  configs.pickle
notebooks/: [EDA] TabNet.ipynb
staker/: constants.py  evaluate.py  predict.py  train.py
staker/configs/: .environnement  base.py  main.py
staker/data/: dataset.py
staker/evaluation/: metrics.py
staker/models/: base.py  factory.py  layers.py  loss.py  mlp.py  tabnet.py
