[tool.poetry]
name = "staker"
version = "0.1.0"
description = ""
authors = ["Nico Coallier <nico@dmtr.ai>"]

[tool.poetry.dependencies]
python = "^3.8"
tensorflow = "^2.5.0"
numerai-cli = "^0.3.0"
tensorflow-addons = "^0.13.0"
numerapi = "^2.6.0"
pydantic = "^1.8.2"
sklearn = "^0.0"

[tool.poetry.dev-dependencies]
jupyter = "^1.0.0"
pre-commit = "^2.14.0"
black = "20.8b1"
isort = "5.7.0"
flake8 = "3.8.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
force_single_line = true
atomic = true
include_trailing_comma = true
lines_after_imports = 2
lines_between_types = 1
use_parentheses = true
src_paths = ["poetry", "tests"]
skip_glob = ["*/setup.py"]
filter_files = true
known_first_party = "poetry"


[tool.black]
line-length = 88
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | tests/.*/setup.py
)/
'''
